composer/k8s/xdoc/web.yml
apiVersion: v1
kind: Namespace
metadata:
  name: xdoc-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xdoc-web
  namespace: xdoc-web
spec:
  selector:
    matchLabels:
      app: xdoc-web
  replicas: 3
  template:
    metadata:
      labels:
        app: xdoc-web
    spec:
      containers:
        - args:
            - python3
            - /app/cy_xdoc/server.py
            - bind=0.0.0.0:80
            - content_segment_len=9
            - host_url=https://172.16.7.91/lvfile
            - elastic_search.server=http://192.168.18.36:9200
            - elastic_search.prefix_index=lv-codx
            - db.host=192.168.18.36
            - db.port=27018
          image: nttlong/lv-file:rc.0.7.4
          name: xdoc-web
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources: { }
---
apiVersion: v1
kind: Service
metadata:
  name: xdoc-web-service
  namespace: xdoc-web
  labels:
    app: xdoc-web
spec:
  type: ClusterIP
  selector:
    app: xdoc-web
  ports:
  - port: 8082
    targetPort: 80
    protocol: TCP
#    nodePort: 31000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xdoc-web-ingress
  namespace: xdoc-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx #nginx or lv-file-ingress
  rules:
#    - host: myservicea.foo.org
     - http:
        paths:
          - pathType: Prefix
            path: /lvfile
            backend:
              service:
                name: xdoc-web-service
                port:
                  number: 8082
#  rules:
#    - http:
#        paths:
#          - pathType: Prefix
#            path: "/(.+)"
#            backend:
#              service:
#                name: xdoc-web-service
#                port:
#                  number: 8017

#The Ingress  is invalid: spec.rules[0].host: Invalid value: "172.16.7.91": must be a DNS name, not an IP address
